--- a/Formatos ADS/STORY HOVER XPAND/hover-text-big2.html
+++ b/Formatos ADS/STORY HOVER XPAND/hover-text-big2.html
@@ -120,7 +120,7 @@
             <div class="details">
                 
 
-               <iframe  src="story-resize.html" width="305" height="605" frameborder="0" scrolling="no" position="absolute"></iframe>
+               <iframe  src="story-resize.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: -8px; margin-top: -8px;"></iframe>
             </div>
 
 
