--- a/Formatos ADS/STORY HOVER XPAND/story-resize.html
+++ b/Formatos ADS/STORY HOVER XPAND/story-resize.html
@@ -392,7 +392,7 @@ Uno de ellos es la <b>Alfa-Lactoalbúmina,</b> la proteína de la leche materna 
 
                
 
-                <div style="text-align:right; background-color:white; background-size:25px; height:20px;margin-left: 3px; margin-top: 30px;">
+                <div style="text-align:right; background-color:white; background-size:25px; height:20px;margin-left: 3px; margin-top: 20px; margin-bottom: 20px;">
                     <span>  
                        
                          <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.alulaprogress.mx/"  target="block" >    
