--- a/Grisi Walmart/Fade-Gif.html
+++ b/Grisi Walmart/Fade-Gif.html
@@ -194,7 +194,7 @@
 
                          
                 <div class="te-cover"> 
-                <img src="https://i.imgur.com/aV797g7.gif" alt="" /> </div>
+                <img src="https://i.imgur.com/vNy42y3.gif" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
