--- a/Grisi Walmart/Fade-Gif.html
+++ b/Grisi Walmart/Fade-Gif.html
@@ -205,7 +205,7 @@
                 <div style="margin-top:2px; margin-left: 2px; margin-right: 10px;">
                     <div class="bzm_text">
                         <span class="bzm_text_title  bzm_text_bold" style="color: black;line-height:1.1; font-size:24px; margin-left:0px; margin-right:0px; margin-top:23px; text-align: left; width: 90%;">
-						   Porque no puedo imaginarme dormir sin si. 
+						   Porque no puedo imaginarme dormir sin ti. 
 						</span>
                        <span class="bzm_text_medium" style="color: black;line-height:em; font-size:19px; width:95%; text-align:justify;">
                         <p style="margin-top: 6px; line-height: 1.3em; margin-left: 3px; ">
