--- a/Cesantias 2/fade-completo.html
+++ b/Cesantias 2/fade-completo.html
@@ -93,20 +93,20 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/JbLeRz1.jpg");
+            background: url("https://i.imgur.com/0D4aDLY.jpg");
             background-size: cover;
 
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/ACq28Ak.jpg");
+            background: url("https://i.imgur.com/Q2wI46r.jpg");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/kNu5Oo2.jpg");
+            background: url("https://i.imgur.com/EKI1E2N.jpg");
             background-size: cover;
           
         }
