--- a/Cesantias 2/fade-small.html
+++ b/Cesantias 2/fade-small.html
@@ -271,7 +271,7 @@
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
       
 
-        <a href="https://www.fna.gov.co/cesantias" target="_blank">
+        <a href="https://www.fna.gov.co/cesantias/afiliacion-y-traslados?utm_source=HAVAS&utm_medium=AUDIOAD&utm_campaign=cesantias" target="_blank">
             <div class="carousel-container">
                 <!-- ESTAS SE COLOCAN EN EL CSS -->
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
@@ -288,13 +288,13 @@
 
                 <div id="botones-para-compartir"> 
                    
-                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.fna.gov.co/cesantias" target="_blank"> 
+                    <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.fna.gov.co/cesantias/afiliacion-y-traslados?utm_source=HAVAS&utm_medium=AUDIOAD&utm_campaign=cesantias" target="_blank"> 
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/3X38eV0.png" title="compartir en facebook" width="22" /></a>
 
-                        <a class="shared" href="https://plus.google.com/share?url=https://www.fna.gov.co/cesantias" target="_blank"> 
+                        <a class="shared" href="https://plus.google.com/share?url=https://www.fna.gov.co/cesantias/afiliacion-y-traslados?utm_source=HAVAS&utm_medium=AUDIOAD&utm_campaign=cesantias" target="_blank"> 
                             <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/QeKX7Cq.png" title="compartir en google+" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=https://www.fna.gov.co/cesantias" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/PTflRUi.png" title="compartir en twitter" width="22" /></a> </span></div>
+                            <a class="shared" href="https://twitter.com/home?status=https://www.fna.gov.co/cesantias/afiliacion-y-traslados?utm_source=HAVAS&utm_medium=AUDIOAD&utm_campaign=cesantias" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/PTflRUi.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
