--- a/Huawei2/Venetian.html
+++ b/Huawei2/Venetian.html
@@ -2230,7 +2230,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/uRkiIbV.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/m67ll4s.png"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/3MmnKgr.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.shape.html:shape/html-->
