--- a/Paris/Cube.html
+++ b/Paris/Cube.html
@@ -549,8 +549,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
-/*#/#*//*#i5.i236.image.css:image/base/css*/
-#i236 { opacity: 1; }
+/*#/#*//*#i5.i236.button.css:button/base/css*/
+#i236 { position: absolute; cursor: pointer; opacity: 1; background-color: rgba(28,162,230,1); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 20px; border-color: rgba(28,162,230,1)rgba(28,162,230,1); border-width: 1px; margin:-1px; border-style: solid; }
+#i236:hover { opacity: 1; background-color: rgba(0,90,140, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
+#i236:active { opacity: 1; background-color: rgba(0,80,130, 1); font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #ffffff; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); border-radius: 2px; border-color: #006496; border-width: 1px; margin:-1px; border-style: solid; }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
@@ -693,11 +695,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i236.i237.positioning.css:positioning/base/css.2*/
-#i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 159px; height: 45px;
-        -ms-transform: translate(0, 0) translate(71px, 80px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(71px, 80px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(71px, 80px) rotate(0deg);
-        transform: translate(0, 0) translate(71px, 80px) rotate(0deg);
+#i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 108px; height: 30px;
+        -ms-transform: translate(0, 0) translate(96px, 86px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(96px, 86px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(96px, 86px) rotate(0deg);
+        transform: translate(0, 0) translate(96px, 86px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -754,7 +756,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/reIKPKh.png"/>
+<img id="i130" src="https://i.imgur.com/6NMYZMl.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -764,9 +766,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/g0qy2O2.png"/>
-<!--#/#--><!--#i5.i236.image.html:image/html-->
-<img id="i236" src="https://i.imgur.com/TgCtoo7.png"/>
+<img id="i58" src="https://i.imgur.com/oa9Fics.png"/>
+<!--#/#--><!--#i5.i236.button.html:button/html-->
+<button id="i236">¡Ven a París!</button>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -776,7 +778,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i234.image.html:image/html-->
-<img id="i234" src="https://i.imgur.com/jaHvY55.png"/>
+<img id="i234" src="https://i.imgur.com/tz808QL.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -824,7 +826,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://kiplingmexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/HMnKHki61Z42'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -834,17 +836,15 @@ document.getElementById('i91').addEventListener('click', function(e){
  
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
-/*#/#*//*#i5.i236.image.js:image/base/js*/
-
-/*#/#*//*#i236.i237.positioning.js:positioning/base/js.2*/
-bmShow('i236');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/DD46F1dFiuM2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/HMnKHki61Z42'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+/*#/#*//*#i236.i237.positioning.js:positioning/base/js.2*/
+bmShow('i236');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -856,7 +856,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://kiplingmexico.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/HMnKHki61Z42'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
@@ -915,11 +915,11 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i236.image.meta:image/meta*/
-name: TgCtoo7.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+/*#/#*//*#i5.i236.button.meta:button/meta*/
+name: ¡Ven a París!;
 customName: false;
 /*#/#*//*#i236.i237.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
+data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
