--- a/Paris/Cube.html
+++ b/Paris/Cube.html
@@ -768,7 +768,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/oa9Fics.png"/>
 <!--#/#--><!--#i5.i236.button.html:button/html-->
-<button id="i236">¡Ven a París!</button>
+<button id="i236">¡Ven a Paris!</button>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -778,7 +778,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i234.image.html:image/html-->
-<img id="i234" src="https://i.imgur.com/tz808QL.png"/>
+<img id="i234" src="https://i.imgur.com/9rr8qJo.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
