--- a/Paris/fade-completo.html
+++ b/Paris/fade-completo.html
@@ -106,7 +106,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/O1An7ia.png");
+            background: url("https://i.imgur.com/79fC7qs.png");
             background-size: cover;
           
         }
