--- a/Paris/Cube.html
+++ b/Paris/Cube.html
@@ -778,7 +778,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i234.image.html:image/html-->
-<img id="i234" src="https://i.imgur.com/9rr8qJo.png"/>
+<img id="i234" src="https://i.imgur.com/UMgac5X.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
