--- a/Kipling/hover-text-big2.html
+++ b/Kipling/hover-text-big2.html
@@ -103,13 +103,13 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/A2r47LD.gif">
+                <img src="https://i.imgur.com/HMrCnds.gifv">
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/DD46F1dFiuM2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/gg6XHcV.png"> </a></div>
+                <a href="https://goo.gl/maps/DD46F1dFiuM2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/10aFX8K.png"> </a></div>
 
              
 
