--- a/Kipling/hover-text-big3.html
+++ b/Kipling/hover-text-big3.html
@@ -103,7 +103,7 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/A2r47LD.gif">
+                <img src="https://i.imgur.com/N0I1tT4.gif">
             </div>
 
 
