--- a/Porsche/fade-completo.html
+++ b/Porsche/fade-completo.html
@@ -87,7 +87,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/2rqWu5B.png");
+            background: url("https://i.imgur.com/AtTnoTC.png");
             background-size: cover;
 
             
@@ -362,7 +362,7 @@
   
   <div class="value_wrapper carousel-wrapper size_320x480">
      <div class="logo">
-                        <img src="https://i.imgur.com/Mz0TLUW.png" style="height:42px;">
+                        <img src="https://i.imgur.com/4OKwPir.png" style="height:42px;">
                     </div>
    
      <div class="value_cover bg cover-1 carousel-item item-1">
