--- a/Porsche/Fade-Gif.html
+++ b/Porsche/Fade-Gif.html
@@ -194,7 +194,7 @@
 
                          
                 <div class="te-cover"> 
-                <img src="https://i.imgur.com/vzRNs4Y.gif" alt="" /> </div>
+                <img src="https://i.imgur.com/TlOOXB6.gif" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
