--- a/Cesantias 2/fade-small.html
+++ b/Cesantias 2/fade-small.html
@@ -231,17 +231,18 @@
             height:30px;
             margin-left:1px;
             margin-top:10px;
+            float:right;
 
         }
 
 
 
         .fadesmall #botones-para-compartir {
-            text-align:right;
-            margin-right: 12px;
+            text-align:left;
+            margin-left: 12px;
             display:inline;
-            float:right;
-            margin-top:-30px;
+            float:left;
+            margin-top:20x;
             
         }
 
