--- a/Uni Panamericana/300x600/ZoomExp300x600.html
+++ b/Uni Panamericana/300x600/ZoomExp300x600.html
@@ -216,7 +216,7 @@ a {text-decoration: none;}
                        
                    </div>
 
-                <div style="bottom:0px;height:40px;text-align:right ;margin-top:-2px; margin-right: 4px;"> <img src="https://i.imgur.com/llL3jat.png" style="height:45px; text-decoration: none;">
+                <div style="bottom:0px;height:40px;text-align:right ;margin-top:-2px; margin-right: 4px; background-color: #fff;"> <img src="https://i.imgur.com/llL3jat.png" style="height:45px; text-decoration: none;">
 
                
           </div>
