--- a/Xcaret3/ZoomExp300x600.html
+++ b/Xcaret3/ZoomExp300x600.html
@@ -163,6 +163,11 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/Ul0XfQe.png">
       
     </li>
+
+     <li>
+      <img src="https://i.imgur.com/Cwr4J9d.jpg">
+      
+    </li>
   </ol>
 </div>
 
