--- a/Xcaret3/fade-completoING.html
+++ b/Xcaret3/fade-completoING.html
@@ -78,20 +78,20 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/Iy4xyKY.png");
+            background: url("https://i.imgur.com/gpzJtsR.png");
             background-size: cover;
 
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/cvOH1tT.png");
+            background: url("https://i.imgur.com/YeGmB0W.png");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/dxMpOba.png");
+            background: url("https://i.imgur.com/sw1m5m6.png");
             background-size: cover;
           
         }
