--- a/Xcaret3/Cube2ing.html
+++ b/Xcaret3/Cube2ing.html
@@ -741,7 +741,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/3xMworl.png"/>
+<img id="i130" src="https://i.imgur.com/b2FRhVY.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -751,7 +751,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/FkIGEmM.png"/>
+<img id="i58" src="https://i.imgur.com/7NkpWId.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -761,7 +761,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/kDthSB4.png"/>
+<img id="i60" src="https://i.imgur.com/X3uzFoh.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
