--- a/Xcaret3/ZoomExp300x600ing.html
+++ b/Xcaret3/ZoomExp300x600ing.html
@@ -150,7 +150,7 @@ a {text-decoration: none;}
  	 <div class="wrapper size_300x250">
     
 
-  <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:75%; color: white;"><b>DESCUBRE MÁS</b></span></div>
+  <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:75%; color: white;"><b>DISCOVER MORE</b></span></div>
 <div class="ism-slider" data-transition_type="zoom" data-play_type="loop" data-interval="3000" data-image_fx="zoompan" data-buttons="false" data-radios="false" id="my-slider" style="width: 300px; height: 450px; border-radius: none;">
   <ol>
     <li>
@@ -171,7 +171,7 @@ a {text-decoration: none;}
   </ol>
 </div>
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:AvenirLTStd-Book; color:#645546; font-size:25px;  text-decoration: none;">Más que un hotel, es una experiencia.</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:AvenirLTStd-Book; color:#645546; font-size:25px;  text-decoration: none;">9 parks and tours, food and drink, all included!</span><br>
 
                    
                    </div>
