--- a/IKE/300x600/ZoomExp300x600.html
+++ b/IKE/300x600/ZoomExp300x600.html
@@ -5,15 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ZoomExp 300x600</title>
-    <link href="https://fonts.googleapis.com/css?family=Trebuchet MS;" rel=stylesheet>
+    <link href="https://fonts.googleapis.com/css?family=Arial;" rel=stylesheet>
 
 
 <style>
     
-    @font-face {
-          font-family: MyriadPro-CondIt;
-          src: url(MyriadPro-CondIt.woff);
-        }
+   
 
 a {text-decoration: none;} 
 
@@ -46,7 +43,7 @@ a {text-decoration: none;}
             position: relative;
             overflow: hidden;
             color: #000;
-            font-family: MyriadPro-CondIt;
+            font-family: Arial;
             border: 1px solid #c5c5c5;
         }
 
@@ -193,14 +190,14 @@ a {text-decoration: none;}
  
  
 
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:MyriadPro-CondIt; color:#000000; font-size:20px;  text-decoration: none;">Viaja tranquilo, durante tu viaje cuentas con:</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Arial; color:#000000; font-size:16px;  text-decoration: none;">Viaja tranquilo, durante tu viaje cuentas con:</span><br>
 
   
   
    
    
-    <span class=" ism_text_medium ism_text_bold" style="font-family:MyriadPro-CondIt; color:#000000; font-size:15px; text-align:left; text-decoration: none; margin-top: 0px; line-height:20pt;"><ul style="margin-left: -50px; width: 98%;">
-  <ul style="margin-top: -8px;">
+    <span class=" ism_text_medium ism_text_bold" style="font-family:Arial; color:#000000; font-size:12px; text-align:left; text-decoration: none; margin-top: 0px; line-height:16pt;"><ul style="margin-left: -50px; width: 98%;">
+  <ul style="margin-top: -15px;">
   <li>Reembolso por daños, pérdida o demora de equipaje.</li> 
   <li>Cobertura para gastos por enfermedad, accidente o fallecimiento.</li>
   <li>El servicio de una ambulancia sin costo.</li> 
