--- a/IKE/Cube.html
+++ b/IKE/Cube.html
@@ -506,7 +506,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: MyriadPro-CondIt; font-size: 21px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 263px; height: 46px;
         -ms-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
@@ -559,13 +559,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: MyriadPro-CondIt; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 275px; height: 48px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 230px; height: 48px;
+        -ms-transform: translate(-50%, -50%) translate(4px, 69px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(4px, 69px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(4px, 69px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(4px, 69px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -800,7 +800,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(247px, 205px) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: MyriadPro-CondIt; font-size: 21px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 211px; height: 55px;
         -ms-transform: translate(-50%, -50%) translate(5px, 76px) rotate(0deg);
@@ -865,18 +865,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i224.font-local.css:font/font-local/css*/
-/*#i224.i225.font-local.css:font-local/css.1*/
-@font-face {
-font-family: 'MyriadPro-CondIt';
-src: url('fonts/');
-src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/') format('woff'),
-url('fonts/') format('truetype'),
-url('fonts/MyriadPro-CondIt.otf') format('opentype'),
-url('fonts/') format('svg');
-}
-/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -957,7 +945,6 @@ url('fonts/') format('svg');
         <span>Swipe</span>
     </div>
 </div>
-<!--#/#--><!--#i224.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i2.cube.js:cube/js.1*/
@@ -1323,6 +1310,4 @@ customName: false;
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i224.font.meta:font/meta*/
-name: Web Font: MyriadPro-CondIt; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
