--- a/IKE/fade-completo.html
+++ b/IKE/fade-completo.html
@@ -93,20 +93,20 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/0WlmdsY.jpg");
+            background: url("https://i.imgur.com/BeESpHd.jpg");
             background-size: cover;
 
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/zmO1mOI.jpg");
+            background: url("https://i.imgur.com/lUPWp9o.jpg");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/Coj8m8E.jpg");
+            background: url("https://i.imgur.com/F2IRe68.jpg");
             background-size: cover;
           
         }
