--- a/Xcaret3/fade-completo.html
+++ b/Xcaret3/fade-completo.html
@@ -78,7 +78,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/SWH5MwV.png");
+            background: url("https://i.imgur.com/riupDTC.png");
             background-size: cover;
 
         }
