--- a/Xcaret3/fade-completoING.html
+++ b/Xcaret3/fade-completoING.html
@@ -78,7 +78,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/gpzJtsR.png");
+            background: url("https://i.imgur.com/XkHXDWP.png");
             background-size: cover;
 
         }
