--- a/Xcaret3/fade-completoING.html
+++ b/Xcaret3/fade-completoING.html
@@ -84,14 +84,14 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/YeGmB0W.png");
+            background: url("https://i.imgur.com/PhGZHee.png");
             background-size: cover;
 
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/sw1m5m6.png");
+            background: url("https://i.imgur.com/BFq5y0F.png");
             background-size: cover;
           
         }
