--- a/Kipling/Cube3.html
+++ b/Kipling/Cube3.html
@@ -776,7 +776,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i234.image.html:image/html-->
-<img id="i234" src="https://i.imgur.com/PK5LAPs.png"/>
+<img id="i234" src="https://i.imgur.com/2rjhw66.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
