--- a/Xavage/fade-completo.html
+++ b/Xavage/fade-completo.html
@@ -386,14 +386,14 @@
 
         </div>
    
-  <!--   <div id="btn-logo">
+     <div id="btn-logo">
         <div class="logo">
                         <img src="https://i.imgur.com/7BmuNVX.png" style="height: 10px;">
                     </div>
 
     <div id="botones-para-compartir" style="display:inline;float:left;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/FSZ4JWosa912" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/yVs19GO.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://goo.gl/maps/FSZ4JWosa912" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/Etsg6aD.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://goo.gl/maps/FSZ4JWosa912" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/bYkyRSv.png" title="compartir en twitter" width="22" /></a> </span></div>
 
-    </div>-->
+    </div>
 
 </body>
 
