--- a/Formatos ADS/Formulario hover/Formulario.html
+++ b/Formatos ADS/Formulario hover/Formulario.html
@@ -10,7 +10,7 @@
             }
 .form{
     width:340px;
-    height:440px;
+    height:600px;
     background:#ffffff;
     border-radius:0px;
     box-shadow:0 0 0px 0px #fff;
@@ -93,8 +93,14 @@ span{
         </style>
     
     <form class="form">
-        <span style="bottom:0px; text-align:center ; float:center; margin-top:-500px; margin-right: 0px; background-color: #fff;"> <img src="https://i.imgur.com/llL3jat.png" style="height:60px; text-decoration: none; border-radius:0px;
+        <span style="bottom:10px; text-align:center ; float:center; top:-400px; margin-right: 0px; background-color: #fff;"> <img src="https://i.imgur.com/llL3jat.png" style="height:70px; text-decoration: none; border-radius:0px;
     box-shadow:0 0 0px 0px #fff;"></span>
+
+    <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; margin-left:0px; text-align:center; font-size: 18px; font-family: Arial; color:#5a5a5a;">
+                 <i> Doctorado en ciencias Empresariales.</i></span>
+                 <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; margin-left:0px; text-align:center; font-size: 11px; font-family: Arial; color:#a50118; width: 95%; margin-top: 5px;">
+                 <p> ¡Envía el formulario y te mandaremos más información!</p></span>
+             
   <!--<h2>CONTÁCTANOS</h2>-->
   <p type="Nombre:"><input placeholder="Escribe tu nombre:"></input></p>
   <p type="E-mail:"><input placeholder="Déjanos saber cómo te conatactaremos."></input></p>
@@ -102,9 +108,9 @@ span{
  
 
 <form action="procesar_datos.php" method="post" style="margin-top: 100px;">
-  <label for="condiciones"><a href="https://www.up.edu.mx/sites/default/files/up_mexico_vf-aviso_aspirantes_internet_0.pdf" target="_blank"> He leído y acepto los términos y condiciones.</a></label><input type="checkbox" name="condiciones" />
+  <label for="condiciones"><a href="https://www.up.edu.mx/sites/default/files/up_mexico_vf-aviso_aspirantes_internet_0.pdf" target="_blank" style="font-size: 14px;"> He leído y acepto los términos y condiciones.</a></label><input type="checkbox" name="condiciones" />
 
-<button value="Enviar un email" onclick="parent.location='angelica.design89@gmail.com'" style="margin-top: 20px;text-align: center;">ENVIAR</button>
+<button value="Enviar un email" style="margin-top: 20px; float: center; text-align: center; background-color:#a50118; margin-right: 65px; color: white; border: none;">ENVIAR</button>
 </form>
 
 
