--- a/Xavage/fade-completo.html
+++ b/Xavage/fade-completo.html
@@ -100,7 +100,7 @@
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/2eHGue5.png");
+            background: url("https://i.imgur.com/t5oYOfI.png");
             background-size: cover;
 
             
