--- a/Xavage/Cube.html
+++ b/Xavage/Cube.html
@@ -931,7 +931,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/zLe1jl6.png"/>
+<img id="i58" src="https://i.imgur.com/LjtZKcN.png"/>
 <!--#/#--><!--#i5.i194.text.html:text/html-->
 <div id="i194">¿Buscas desafiar tus límites?</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -953,7 +953,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/W5lPrkq.png"/>
+<img id="i60" src="https://i.imgur.com/VUppQi6.png"/>
 <!--#/#--><!--#i6.i196.text.html:text/html-->
 <div id="i196">Vive este desafío lleno de adrenalina y ¡sigue tus instintos!</div>
 <!--#/#--><!--#i6.i240.image.html:image/html-->
