--- a/Xavage/ZoomExp300x600.html
+++ b/Xavage/ZoomExp300x600.html
@@ -160,7 +160,7 @@ a {text-decoration: none;}
       <img src="https://i.imgur.com/RiOUgYV.png">
       
     <li>
-      <img src="https://i.imgur.com/YiJOgue.png">
+      <img src="https://i.imgur.com/tstneWb.png">
       
     </li>
 
