--- a/Formatos ADS/Formulario hover/formulario-def.html
+++ b/Formatos ADS/Formulario hover/formulario-def.html
@@ -221,42 +221,41 @@
             <div class="details" style="background-color: white">
                 <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
                 <form class="FR form" action="#" method="post">
-                    <span style="bottom:10px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/llL3jat.png" style="height:80px; text-decoration: none; border-radius:0px; margin-top:50px; margin-left: -10px;
+                    <span style="bottom:10px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/llL3jat.png" style="height:80px; text-decoration: none; border-radius:0px; margin-top:15px; margin-left: -10px;
     box-shadow:0 0 0px 0px #fff;"></span>
 
-                    <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; margin-left:0px; text-align:center; font-size: 18px; font-family: Arial; color:#5a5a5a;">
+                    <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; margin-left:0px; text-align:center; font-size: 19px; font-family: Arial; color:#5a5a5a; margin-top: 10px;">
                         <i> Doctorado en ciencias Empresariales.</i></span>
-                    <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; margin-left:0px; text-align:center; font-size: 11px; font-family: Arial; color:#a50118; width: 95%; margin-top: 5px;">
+                    <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; margin-left:0px; text-align:center; font-size: 14px; font-family: Arial; color:#a50118; width: 95%; margin-top: 5px;">
                         <p> ¡Envía el formulario y te mandaremos más información!</p>
                     </span>
 
                     <!--<h2>CONTÁCTANOS</h2>-->
                     <p type="Nombre:"><input placeholder="Escribe tu nombre:"></p>
-                    <p type="E-mail:"><input placeholder="Déjanos saber cómo te conatactaremos."></p>
+                    <p type="E-mail:"><input placeholder="Escribe tu dirección de E-mail"></p>
                     <!--<p type="MeNSAJE:"><input placeholder="¿Qué quisieras decirnos?"></input></p>-->
 
                     <span style="display: flex; margin-top: 35px">
 
-                        <label style="min-width: 80%" for="condiciones"><a href="https://www.up.edu.mx/sites/default/files/up_mexico_vf-aviso_aspirantes_internet_0.pdf" target="_blank" style="font-size: 14px;"> He leído y acepto los términos y condiciones.</a></label><input type="checkbox" name="condiciones" />
+                        <label style="min-width: 80%" for="condiciones"><a href="https://www.up.edu.mx/sites/default/files/up_mexico_vf-aviso_aspirantes_internet_0.pdf" target="_blank" style="font-size: 12px;"> He leído y acepto los términos y condiciones.</a></label><input type="checkbox" name="condiciones" />
                     </span>
 
-                    <input type="button" name="send" id="send" style="margin-top: 20px; text-align: center; background-color:#a50118; color: white; border: none; width: 90px; position: absolute; left: 50%; margin-left: -45px; cursor: pointer" value="ENVIAR">
+                    <input type="button" name="send" id="send" style="margin-top: 30px; text-align: center; background-color:#a50118; color: white; border: none; width: 90px; position: absolute; left: 50%; margin-left: -40px; cursor: pointer" value="ENVIAR">
                 </form>
             </div>
 
             <div class="FR red">
-                 <span style="margin-top: 500px; text-align:center ; float:center; margin-right: 0px; background-color: #fff;"> <img src="https://i.imgur.com/llL3jat.png" style="height:80px; margin-top: 100px; text-decoration: none; border-radius:0px; margin-left: -10px;
+                 <span style=" text-align:center ; float:center; margin-right: 0px; background-color: #fff;"> <img src="https://i.imgur.com/llL3jat.png" style="height:80px; margin-top: 20px; text-decoration: none; border-radius:0px; margin-left: -10px;
     box-shadow:0 0 0px 0px #fff;"></span>
 
-    <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-left:15px; text-align:left; font-size: 18px; font-family: Montserrat,sans-serif; color: darkblue; margin-top: 50px; width: 98%; ">
+    <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-left:15px; text-align:left; font-size: 18px; width: 98%; ">
 
-                        <img src="https://i.imgur.com/MSLTgBn.png" style="height:20px; width: 20px; text-decoration: none;">
-                        <i> Información enviada a Universidad Panamericana</i></span>
-                          <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000;margin-top: 40px;  margin-left:10px; text-align:center; font-size: 18px; font-family: Montserrat, sans-serif;  color:#5a5a5a;">
-                        <i>¡Gracias, te enviaremos información muy pronto!</i></span>
+                        <img src="https://i.imgur.com/vi5eiKG.jpg" style="height:270px; width: 260px; text-decoration: none;margin-left: -25px; margin-top: 15px;">
+                       </span>
+                    
                 
      <a href=https://www.up.edu.mx/en/international/mex"  target="_blank">             
- <input type="button" name="send" id="send" style="margin-top: 70px; text-align: center; background-color:#a50118; color: white; border: none; width: 200px; position: absolute; left: 50%; margin-left: -94px; cursor: pointer" value="VISITA NUESTRA WEBSITE"></a>
+ <input type="button" name="send" id="send" style="margin-top: 40px; text-align: center; background-color:#a50118; color: white; border: none; width: 200px; position: absolute; left: 50%; margin-left: -94px; cursor: pointer" value="VISITA NUESTRA WEBSITE"></a>
 
             </div>
 
