--- a/office depot/Cube.html
+++ b/office depot/Cube.html
@@ -496,7 +496,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
+#i20 { background-color: #fff; opacity: 1;
 }
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
 #i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
@@ -535,8 +535,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
 }
-/*#/#*//*#i177.i178.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i91 { cursor: pointer; }
 /*#/#*//*#i91.i92.positioning.css:positioning/base/css.1*/
 #i91 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -547,7 +545,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
+#i30 { background-color: #fff; opacity: 1;
 }
 /*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
 #i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -560,10 +558,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 230px; height: 48px;
-        -ms-transform: translate(-50%, -50%) translate(5px, 85px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(5px, 85px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(5px, 85px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(5px, 85px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(2px, 85px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(2px, 85px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(2px, 85px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(2px, 85px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -715,8 +713,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
 }
-/*#/#*//*#i175.i176.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i95 { cursor: pointer; }
 /*#/#*//*#i95.i96.positioning.css:positioning/base/css.1*/
 #i95 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -727,7 +723,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
-#i40 { background-color: #fafafa; opacity: 1;
+#i40 { background-color: #fff; opacity: 1;
 }
 /*#/#*//*#i40.i41.positioning.css:positioning/base/css.1*/
 #i40 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -749,10 +745,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 256px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(3px, 88px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(3px, 88px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(3px, 88px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(3px, 88px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(1px, 89px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(1px, 89px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(1px, 89px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(1px, 89px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -764,10 +760,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, -20px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
-#i99 { background-color: #dedede; opacity: 0.00;
+#i99 { background-color: ; opacity: 0.00;
 }
-/*#/#*//*#i179.i180.actions-clicktag.css:actions-clicktag/base/css.1*/
-#i99 { cursor: pointer; }
 /*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
 #i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -876,48 +870,72 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i186.i187.positioning.js:positioning/base/js.2*/
 bmShow('i186');
-/*#/#*//*#i91.i177.actions.js:actions/base/js*/
+/*#/#*//*#i91.i188.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-document.getElementById('i91').addEventListener('click', function(e){
-    /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
+var el = document.getElementById('i91');
+
+el.addEventListener('click', function(e){
+    /*#i188.i189.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.officedepot.com.mx/officedepot/en/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
 
+/*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i184.image.js:image/base/js*/
 
 /*#/#*//*#i184.i185.positioning.js:positioning/base/js.2*/
 bmShow('i184');
-/*#/#*//*#i95.i175.actions.js:actions/base/js*/
+/*#/#*//*#i95.i190.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-document.getElementById('i95').addEventListener('click', function(e){
-    /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
+var el = document.getElementById('i95');
+
+el.addEventListener('click', function(e){
+    /*#i190.i191.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.officedepot.com.mx/officedepot/en/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
+/*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i6.i181.image.js:image/base/js*/
 
 /*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
 bmShow('i181');
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
-/*#/#*//*#i99.i179.actions.js:actions/base/js*/
+/*#/#*//*#i99.i192.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-document.getElementById('i99').addEventListener('click', function(e){
-    /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
+var el = document.getElementById('i99');
+
+el.addEventListener('click', function(e){
+    /*#i192.i193.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.officedepot.com.mx/officedepot/en/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
+/*#/#*//*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
