--- a/office depot/Cube2.html
+++ b/office depot/Cube2.html
@@ -496,7 +496,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
-#i20 { background-color: #fafafa; opacity: 1;
+#i20 { background-color: #fff; opacity: 1;
 }
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
 #i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
@@ -547,7 +547,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.i51.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i4 { cursor: pointer; }
 /*#/#*//*#i5.i30.shape.css:shape/base/css*/
-#i30 { background-color: #fafafa; opacity: 1;
+#i30 { background-color: #fff; opacity: 1;
 }
 /*#/#*//*#i30.i31.positioning.css:positioning/base/css.1*/
 #i30 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -560,10 +560,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 230px; height: 48px;
-        -ms-transform: translate(-50%, -50%) translate(5px, 85px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(5px, 85px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(5px, 85px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(5px, 85px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(-2px, 85px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-2px, 85px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-2px, 85px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-2px, 85px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -698,10 +698,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
 #i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 193px;
-        -ms-transform: translate(0, 0) translate(-8px, -21px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-8px, -21px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-8px, -21px) rotate(0deg);
-        transform: translate(0, 0) translate(-8px, -21px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -17px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -17px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -17px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -17px) rotate(0deg);
 }
 /*#/#*//*#i5.i184.image.css:image/base/css*/
 #i184 { opacity: 1; }
@@ -727,7 +727,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
 /*#/#*//*#i6.i40.shape.css:shape/base/css*/
-#i40 { background-color: #fafafa; opacity: 1;
+#i40 { background-color: #fff; opacity: 1;
 }
 /*#/#*//*#i40.i41.positioning.css:positioning/base/css.1*/
 #i40 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
@@ -749,10 +749,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 225px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(2px, 88px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(2px, 88px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(2px, 88px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(2px, 88px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(2px, 84px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(2px, 84px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(2px, 84px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(2px, 84px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -885,7 +885,11 @@ document.getElementById('i91').addEventListener('click', function(e){
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i184.image.js:image/base/js*/
@@ -901,7 +905,11 @@ document.getElementById('i95').addEventListener('click', function(e){
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i6.i181.image.js:image/base/js*/
 
 /*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
@@ -917,7 +925,11 @@ document.getElementById('i99').addEventListener('click', function(e){
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*//*#i183.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
