--- a/Cesantias 2/fade-small.html
+++ b/Cesantias 2/fade-small.html
@@ -115,7 +115,7 @@
             padding: 6px 0 16px .3em;
             line-height: 1.1;
             color: #003386;
-            text-align: left;
+            text-align: center;
             margin-top: 10px;
             width: 99%;
            font-size:20px;
@@ -285,7 +285,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> LAS CESANTÍAS LE DAN PESO AL FUTURO DE TODOS.</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold"> LAS CESANTÍAS LE DAN PESO  <br> AL FUTURO DE TODOS.</span></div>
 
          
 
