--- a/LatamAirlines/ZoomExp300x600.html
+++ b/LatamAirlines/ZoomExp300x600.html
@@ -146,7 +146,7 @@ a {text-decoration: none;}
 
 </head>
 <body class="zoom" style="margin:0px;">
-  <a href="https://www.xavage.com/es/" target="_blank">
+  <a href="https://www.latam.com/es-mx/" target="_blank">
  	 <div class="wrapper size_300x250">
     
 
