--- a/LatamAirlines/fade-completo2.html
+++ b/LatamAirlines/fade-completo2.html
@@ -94,7 +94,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/EFLdgzG.png");
+            background: url("https://i.imgur.com/HZBlzjG.png");
             background-size: cover;
 
         }
