--- a/Little Caesar/Cube.html
+++ b/Little Caesar/Cube.html
@@ -693,11 +693,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i236.i237.positioning.css:positioning/base/css.2*/
-#i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 145px; height: 52px;
-        -ms-transform: translate(0, 0) translate(131px, 97px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(131px, 97px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(131px, 97px) rotate(0deg);
-        transform: translate(0, 0) translate(131px, 97px) rotate(0deg);
+#i236 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 143px; height: 40px;
+        -ms-transform: translate(0, 0) translate(133px, 83px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(133px, 83px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(133px, 83px) rotate(0deg);
+        transform: translate(0, 0) translate(133px, 83px) rotate(0deg);
 }
 /*#/#*//*#i52.i53.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i5 { cursor: pointer; }
@@ -754,7 +754,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/BJuSBHF.png"/>
+<img id="i130" src="https://i.imgur.com/DSKHvMu.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -916,7 +916,7 @@ customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i236.image.meta:image/meta*/
-name: 3PP03Dk.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: yrzwO0j.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i236.i237.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
