--- a/Little Caesar/Fade-Gif.html
+++ b/Little Caesar/Fade-Gif.html
@@ -210,7 +210,7 @@
 						</span>
                        <span class="bzm_text_medium" style="color: black;line-height:em; font-size:19px; width:95%; text-align:justify;">
                         <p style="margin-top: -6px; line-height: 1.3em; margin-left: 3px; ">
-                            Podrás disfrutar de las más sabrosas, hasta con orilla de pretzel, ¡a la vuelta de la esquina!.
+                            Podrás disfrutar de las más sabrosas, hasta con orilla de pretzel, ¡a la vuelta de la esquina!
 
 
 
